# Neptune-lens

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs
src/db/: metadata.rs  vector_store.rs
src/engine/: embedder.rs  indexer.rs  mod.rs  preprocessor.rs
src/ui/: collections_panel.rs  dashboard.rs  indexing_panel.rs  mod.rs  results_grid.rs  search_panel.rs  settings_panel.rs
