[package]
name = "neptune-lens"
version = "0.1.0"
edition = "2021"
description = "Local Google Lens-style image search engine using CLIP embeddings"

[dependencies]
# GUI
eframe = { version = "0.31", features = ["persistence"] }
egui_extras = { version = "0.31", features = ["image"] }

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "webp", "bmp"] }

# ONNX Runtime - pure Rust, no native deps
tract-onnx = "0.21"

# Tensor manipulation
ndarray = "0.16"

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Native file dialogs
rfd = "0.15"

# Directory walking
walkdir = "2.5"

# Synchronization
parking_lot = "0.12"

# Open files with system app
open = "5"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
